--- a/About.html
+++ b/About.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="aboutcss.css">
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<link rel="icon" href="iconpng" type="image/icon type">
 </head>
 <body>
 
