--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="styles.css">
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<link rel="icon" href="iconpng" type="image/icon type">
 </head>
 <body>
   
