--- a/loading.html
+++ b/loading.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="loadingcss.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="icon" href="iconpng" type="image/icon type">
     <title>Document</title>
 </head>
 <body>
