--- a/updates.html
+++ b/updates.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="updatescss.css">
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<link rel="icon" href="iconpng" type="image/icon type">
 </head>
 <body>
 
